Issue #1119 Formatting update
https://gitlab.com/esa/NMF/nmf-issues/-/issues/1119